[package]
name = "tree-sitter-dafny"
description = "Unofficial tree-sitter grammar for the Dafny language."
version = "0.3.0"
authors = ["Oscar Bender-Stone <oscar-bender-stone@protonmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "dafny"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/oscar-bender-stone/tree-sitter-dafny"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
